--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
     />
     <meta name="apple-mobile-web-app-title" content="Todo" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#1f2022" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="description" content="Todo App" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
