change app icon

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,28 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/todo@x48.png" />
     <link
       rel="apple-touch-icon"
-      sizes="64x64"
-      href="%PUBLIC_URL%/todo@x64.png"
+      sizes="48x48"
+      href="%PUBLIC_URL%/todo@x48.png"
     />
     <link
       rel="apple-touch-icon"
-      sizes="128x128"
-      href="%PUBLIC_URL%/todo@x128.png"
+      sizes="72x72"
+      href="%PUBLIC_URL%/todo@x72.png"
     />
     <link
       rel="apple-touch-icon"
-      sizes="256x256"
-      href="%PUBLIC_URL%/todo@x256.png"
+      sizes="96x96"
+      href="%PUBLIC_URL%/todo@x96.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="%PUBLIC_URL%/todo@x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="%PUBLIC_URL%/todo@x192.png"
     />
     <link
       rel="apple-touch-icon"
